# CSI-280-Canvas-Git

./: .env.template  .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: research-issue-template.md
canvas/: __init__.py  __main__.py  errors.py  token.json
canvas/cli/: __init__.py  add.py  base.py  factory.py  init.py  manager.py  parse.py  stage.py  status.py  submit.py  unstage.py
canvas/cli/commands/: __init__.py  add.py  init.py  status.py
canvas/command/: __init__.py  base.py  command.py  factory.py  init.py  parse.py
canvas/models/: File.py  __init__.py  base.py
canvas/oauth/: __init__.py  auth.py  server.py  types.py
canvas/rest/: __init__.py  client.py
canvas/utils/: __init__.py  ansi.py  scope.py
tests/: test_utils.py
tests/command/: test_command.py
tests/oauth/: test_auth.py  test_server.py
tests/rest/: test_client.py
tests/utils/: test_ansi.py  test_scopes.py
